# Turtlebot-ObjectDetection-SW

./: .gitignore  README.md  pyproject.toml
notebooks/: data.yaml  data_explorer.ipynb  environment_checker.ipynb  ssd.ipynb  tf2.ipynb  tf_model.ipynb  tor.ipynb  yol.ipynb
src/: create_yaml.py  data_augmentation.py  data_augmentation_validator.py  dataset_creator.py  train_mode.py  train_model_sw_ver1.py  train_model_sw_ver2.py
